# c4opt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/c4/opt/: opt.cpp  opt.hpp
src/c4/opt/detail/: optionparser.h
test/: CMakeLists.txt  test.cpp  test_basic.cpp
